Adds Disqus Comments support

--- a/templates/macros/blog.html
+++ b/templates/macros/blog.html
@@ -16,5 +16,6 @@
     on {{ post.pub_date }}
   </p>
   {{ post.body }}
+  <div class="comments">{{ render_disqus_comments() }}</div>
   </div>
 {% endmacro %}
